Add Balzac theme

--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@ title: Mainpage
     <main class="container">
     	<div class="row-fluid">
     		<section class="content">
-    		  <h1>Ipsum List</h1>
+    		  <h1>Design Metrics</h1>
     		</section>
+              <h2>A space for resources and conversation.</h2>
     		<ul class="entries">
     		{% for post in paginator.posts %}
     		  <li>
